--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fastapi-backend
     env: python
     plan: free
-    buildCommand: cd backend && uv pip install -r requirements.txt
+    buildCommand: cd backend && pip install -r requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 8000
     envVars:
       - key: DATABASE_URL
