--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.2
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
@@ -29,6 +30,7 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 jinja2==3.1.6
+mako==1.3.10
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mdurl==0.1.2
@@ -39,6 +41,7 @@ pathspec==0.12.1
 platformdirs==4.3.8
 proto-plus==1.26.1
 protobuf==5.29.5
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pydantic==2.11.7
