--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "google-generativeai>=0.8.5",
     "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
+    "pymupdf>=1.26.3",
     "python-jose>=3.5.0",
     "sqlmodel>=0.0.24",
 ]
