🔧 chore: remplacer `docker compose` par `docker-compose` dans le workflow de déploiement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
             cd /root/romeo
             echo "${{ secrets.ROOT_ENV }}" > .env
             echo "${{ secrets.BACKEND_ENV }}" > backend/.env
-            docker compose down
-            docker compose up --build -d
+            docker-compose down
+            docker-compose up --build -d
