🔧 chore: exposer le backend sur `0.0.0.0` et ajouter migration Alembic dans le workflow de déploiement

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,7 @@ jobs:
             cd /root/romeo
             echo "${{ secrets.ROOT_ENV }}" > .env
             echo "${{ secrets.BACKEND_ENV }}" > backend/.env
+            cd backend
+            alembic upgrade head
             docker-compose down
             docker-compose up --build -d
